fix cutting off underscores in certain terminal's sizes

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -199,6 +199,9 @@ body.full-screen-terminal .terminal {
     min-height: 14px;
     min-height: calc(var(--size, 1) * 14px);
 }
+.terminal .terminal-output > :not(.raw) > div, .cmd div {
+    line-height: calc((var(--size) * 14px) + 1px);
+}
 .cmd .cmd-prompt span.fa::before,
 .cmd .cmd-prompt span.fab::before,
 .cmd .cmd-prompt span.fad::before,
